# stacks

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
stacks/: __init__.py  __main__.py  cli.py  config.py  converter.py  db.py  embedder.py  manage.py  prepare.py  search.py  server.py  tokenizer.py
