[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacks"
version = "0.0.6"
description = "Ingesting documents (PDF/PPTX/DOCX/XLSX) into SQLite with semantic search via embeddings"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "sentence-transformers",
    "sqlite-vec",
    "openpyxl",
    "pdfminer.six",
    "python-pptx",
    "python-docx",
    "pymupdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["stacks"]

[project.scripts]
stacks = "stacks.cli:main"
